# ScanMate

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/core/board/: detector.py
backend/server/: main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
