[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "chess-cv>=0.7.2",
    "fastapi[standard]>=0.128.0",
    "opencv-python>=4.13.0.90",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
